--- a/gb/21/4/10/n12870582.md
+++ b/gb/21/4/10/n12870582.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nbrsvv347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nbrsvv347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nbrsvv347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>揭密中共高超音速导弹钻美漏洞 获关键芯片</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/04/id12870644-GettyImages-51678421-600x400.jpg" />
 <h6>韩国的一名技术人员正在检查超级计算机。跟本文内容无关。(Chung Sung-Jun/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2021年04月10日讯】（大纪元记者林燕综合报导）中共高超音速导弹技术取决于<ahref="https://github.com/nbrsvv347/djy/blob/master/gb/tag/%E8%B6%85%E7%BA%A7%E8%AE%A1%E7%AE%97%E6%9C%BA.md#1">超级计算机</a>的应用，而超级计算机的核心芯片是中共钻美国技术管制的空子、通过台湾公司中转获得。</p>
-<p>《华盛顿邮报》周三（4月7日）长篇报导中国<ahref="https://github.com/nbrsvv347/djy/blob/master/gb/tag/%E8%B6%85%E7%BA%A7%E8%AE%A1%E7%AE%97%E6%9C%BA.md#1">超级计算机</a>公司<ahref="https://github.com/nbrsvv347/djy/blob/master/gb/tag/%E5%A4%A9%E6%B4%A5%E9%A3%9E%E8%85%BE.md#1">天津飞腾</a>信息技术有限公司如何从美国获得关键芯片、为中共军方最先进武器研发提供超级计算机的。</p>
-<p>次日，美国商务部周四（8日）宣布将<ahref="https://github.com/nbrsvv347/djy/blob/master/gb/tag/%E5%A4%A9%E6%B4%A5%E9%A3%9E%E8%85%BE.md#1">天津飞腾</a>等七家中国超级计算机实体列入黑名单，理由是这些实体协助中共军事行动，破坏稳定。</p>
+	<p>【大纪元2021年04月10日讯】（大纪元记者林燕综合报导）中共高超音速导弹技术取决于<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%B6%85%E7%BA%A7%E8%AE%A1%E7%AE%97%E6%9C%BA.md#1">超级计算机</a>的应用，而超级计算机的核心芯片是中共钻美国技术管制的空子、通过台湾公司中转获得。</p>
+<p>《华盛顿邮报》周三（4月7日）长篇报导中国<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%B6%85%E7%BA%A7%E8%AE%A1%E7%AE%97%E6%9C%BA.md#1">超级计算机</a>公司<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%A4%A9%E6%B4%A5%E9%A3%9E%E8%85%BE.md#1">天津飞腾</a>信息技术有限公司如何从美国获得关键芯片、为中共军方最先进武器研发提供超级计算机的。</p>
+<p>次日，美国商务部周四（8日）宣布将<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%A4%A9%E6%B4%A5%E9%A3%9E%E8%85%BE.md#1">天津飞腾</a>等七家中国超级计算机实体列入黑名单，理由是这些实体协助中共军事行动，破坏稳定。</p>
 <p>虽然此举可在一定程度上减缓中共的超音速导弹技术研发，但能否完全堵住中共继续通过现行渠道，从美国获得关键超级计算机芯片技术还有待观察。那么中共是如何通过前沿公司获得核心芯片呢？</p>
 <h2>绵阳 中共的低调高超音速武器实验</h2>
 <p>在中国西南部的一个秘密军事设施中正在进行一场模拟实验——高超音速飞行器在大气层中飞行时的热力和阻力——正通过一台超级计算机呼呼作响地运算着。</p>
@@ -24,7 +24,7 @@
 <p>他说：“如果你没有超级计算机，可能需要十年时间。”</p>
 <h2>中国空气动力学研究与发展中心与飞腾之间存在长期合作</h2>
 <p>公开论文资料显示，中国空气动力学研究与发展中心的研究人员在2018年和2019年发表的论文中提及他们的超级计算机使用飞腾的1500和2000系列芯片。</p>
-<p>目前，该中心正与飞腾、国防科技大学和天津<ahref="https://github.com/nbrsvv347/djy/blob/master/gb/tag/%E8%B6%85%E7%AE%97.md#1">超算</a>计算中心开发天河3号的超级计算机——能够处理每秒100万亿次计算的“超大规模”速度。据中共国家媒体报导，计算机采用飞腾的2000系列芯片。</p>
+<p>目前，该中心正与飞腾、国防科技大学和天津<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%B6%85%E7%AE%97.md#1">超算</a>计算中心开发天河3号的超级计算机——能够处理每秒100万亿次计算的“超大规模”速度。据中共国家媒体报导，计算机采用飞腾的2000系列芯片。</p>
 <h2>大多数飞腾高管是前国防科大军官</h2>
 <p>飞腾成立于2014年8月，由国有企业集团中国电子集团公司（CEC）、天津国家超级计算中心和天津市政府共同创建的。国家超级计算中心是由国防科技大学管理的实验室。</p>
 <p>在2015年，美国将天津国家超级计算中心和国防科学技术大学列入实体名单后，飞腾就作为新的中国超级计算机公司出现，被制裁的中共军方实体都通过飞腾以私企“贸易”的名义从事对外核心产品采购。</p>
@@ -56,9 +56,9 @@
 <p>绵阳的高超音速武器实验使用的飞腾超级计算机所有芯片是经由台湾半导体制造公司台积电生产的。它是台湾几家芯片制造商中最大的一家，它制造的芯片也是军民两用。</p>
 <p>台湾国防部联合成立的智库——国防安全研究院研究员欧锡富介绍说，美国和中国都同时有最终将台积电的芯片用于军事目的。</p>
 <p>例如，台积电生产美国先进武器所使用的芯片，包括洛克希德-马丁公司的F-35战斗机。台积电去年宣布将在亚利桑那州建造一座价值120亿美元的工厂，以回应川普政府对半导体供应链安全的担忧。</p>
-<p>“这些私人公司做生意，并不考虑国家安全等因素。”欧说，台湾作为一个小地区，缺乏颁布出口禁令的筹码和意愿；相对于美国的一套相对完整的<ahref="https://github.com/nbrsvv347/djy/blob/master/gb/tag/%E5%87%BA%E5%8F%A3%E7%AE%A1%E5%88%B6.md#1">出口管制</a>措施和法规，台湾相对宽松，漏洞也更多。</p>
+<p>“这些私人公司做生意，并不考虑国家安全等因素。”欧说，台湾作为一个小地区，缺乏颁布出口禁令的筹码和意愿；相对于美国的一套相对完整的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%87%BA%E5%8F%A3%E7%AE%A1%E5%88%B6.md#1">出口管制</a>措施和法规，台湾相对宽松，漏洞也更多。</p>
 <p>另一方面，台湾企业处在两难之间。台湾是一个自治的自由民主地区，一方面依靠华盛顿来防御北京入侵，另一方面又依赖中国市场，中国市场占台湾贸易额的35%。</p>
-<p>台积电在给《华邮》的电子邮件中表示，它遵守所有法律和<ahref="https://github.com/nbrsvv347/djy/blob/master/gb/tag/%E5%87%BA%E5%8F%A3%E7%AE%A1%E5%88%B6.md#1">出口管制</a>。在飞腾被纳入黑名单后，台积电可能必须跟它保持距离；但是因为中国是最大的半导体市场，在法律允许的情况下台积电不太可能放弃中国业务，因为那样将无法向股东交代。</p>
+<p>台积电在给《华邮》的电子邮件中表示，它遵守所有法律和<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%87%BA%E5%8F%A3%E7%AE%A1%E5%88%B6.md#1">出口管制</a>。在飞腾被纳入黑名单后，台积电可能必须跟它保持距离；但是因为中国是最大的半导体市场，在法律允许的情况下台积电不太可能放弃中国业务，因为那样将无法向股东交代。</p>
 <p>另一家跟飞腾合作的台湾公司Alchip表示，它跟飞腾签署的协议规定，其芯片不用于军事用途。</p>
 <p>但2018年Alchip发布的新闻稿还介绍说，它们与“中国国家超级计算中心”合作，当时中国国家超级计算中心因参与核爆活动已被列入美国商务部黑名单三年多。</p>
 <p>责任编辑：林妍 ＃</p>
@@ -67,41 +67,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/21/4/8/n12866725.md#1">台积电世芯晶片涉中制飞弹？ 台经长：未用在军用</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/21/4/8/n12867255.md#1">美祭新禁令 中国超级计算机七实体上黑名单</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/21/4/8/n12867512.md#1">列美黑名单 天津飞腾等中企与军方有何联系</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/21/4/9/n12869626.md#1">美再对中共开铡 禁7超级电脑实体</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/4/8/n12866725.md#1">台积电世芯晶片涉中制飞弹？ 台经长：未用在军用</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/4/8/n12867255.md#1">美祭新禁令 中国超级计算机七实体上黑名单</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/4/8/n12867512.md#1">列美黑名单 天津飞腾等中企与军方有何联系</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/4/9/n12869626.md#1">美再对中共开铡 禁7超级电脑实体</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/25/n11546701.md#1" target="_blank">林辉：中共70年来杀了多少人？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11237722.md#1" target="_blank">美国麻州众议院颁发褒奖状 祝贺法轮大法日</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217581.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11412078.md#1" target="_blank">胡平：未来道德重建 法轮功将发挥更大作用</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/2/n13617338.md#1">【秦鹏直播】俄乌战事未平 俄战机进入瑞典日本</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/2/n13616660.md#1">【拍案惊奇】基辅大决战？普京再派杀手刺乌总统</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/2/n13617253.md#1">侦探的盲点</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13611283.md#1">【更新2.28】俄军逼近基辅 车队长达40英里</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13611950.md#1">俄罗斯侵乌第5天 世界局势出现哪些变化？</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/1/n13614671.md#1">泽连斯基欧议会演说 全场起立鼓掌 翻译都落泪</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/2/n13615002.md#1">小粉红对乌国女性发低俗言论 杜汶泽发文怒呛</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/27/n13608014.md#1">橙色食物对眼睛好 还有这些强大益处</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/27/n13607982.md#1">迷走神经：最长脑神经 刺激它能让你更健康</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/12/n13734765.md#1">【探索时分】共军鹰击21打航母 美日需要担心？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nbrsvv347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nbrsvv347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/10/n12870582.htm">揭密中共高超音速导弹钻美漏洞 获关键芯片</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/10/n12870582.htm">揭密中共高超音速导弹钻美漏洞 获关键芯片</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nbrsvv347/djy/blob/master/gb/21/4/10/n12870582.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nbrsvv347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nbrsvv347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nbrsvv347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/21/4/10/n12870582.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
